[package]
name = "icurl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
eyre = "0.6.8"
rustyline = "11.0.0"
inquire = "0.6.2"
tokio = { version = "1.32.0", features = ["full"] }
serde_json = "1.0"
serde = "1.0"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1.74"
